Reorder USECASE_OPTIONS in uiconfigfile.ini

--- a/src/AgenticAi/UI/uiconfigfile.ini
+++ b/src/AgenticAi/UI/uiconfigfile.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
 PAGE_TITLE = LangGraph: Build Stateful Agentic AI Graphs
 LLM_OPTIONS = Groq
-USECASE_OPTIONS = Basic Chatbot, Chatbot With Web, AI News
+USECASE_OPTIONS = AI News, , Chatbot With Web, Basic Chatbot
 Groq_Model_Options = openai/gpt-oss-120b, openai/gpt-oss-20b, llama-3.3-70b-versatile
